--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ for (file in files) load(file)
 
 - **SchoolDataIT** is an **R** package to **Retrieve**, **Harmonise** and **Map** Open Data regarding the Italian **Education** System 
 
-- **Compiles** and **displays** the available data sets about Italian school system, with a focus on the **infrastructural features**
+- **Compiles** and **displays** the available data sets about Italian school system, with a focus on **infrastructural features**
 
 - **Scope** of this line of research:
   - Encourage **Multidimensional** analysis of the state of the school system
@@ -680,7 +680,7 @@ DT::datatable(spde_summary.hyperpar,
 
 &rarr; What does this example tell us? 
 
-- Assessing the impact of **class size** on student outcomes is less simple than it seems &rarr; **Auxiliary** information such as the **degree of centrality** of municipalities or **geographical information** becomes crucial<a href="https://arxiv.org/pdf/2412.17710" target="_blank">.</a>
+- Assessing the impact of **class size** on student outcomes is less simple than it seems &rarr; **Auxiliary** information such as the **degree of centrality** of municipalities or **geographical information** becomes crucial<a href="https://github.com/lcef97/ICSA25/blob/main/Invalsi_analysis_20240619.pdf" target="_blank">.</a>
 
  
 
